--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "http://henibenamara.github.io/portfolio",
+ 
   "name": "protofolio",
   "homepage":".",
   "version": "0.1.0",
@@ -15,6 +17,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r https://github.com/henibenamara/portfolio",
+  
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
