--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "homepage": "http://henibenamara.github.io/portfolio",
- 
   "name": "protofolio",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +17,6 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -r https://github.com/henibenamara/portfolio",
-  
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
